<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnLaunchServiceFlow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_flow_service" />

    <Button
        android:id="@+id/btnLaunchClientFlow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_flow_client" />

    <Button
        android:id="@+id/btnLoadPurchases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_purchases" />

    <Button
        android:id="@+id/btnLoadHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_history" />

    <Button
        android:id="@+id/btnLoadDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_details" />

</LinearLayout>